fixed scrollbars on Firefox

--- a/dark.css
+++ b/dark.css
@@ -1145,3 +1145,8 @@ mark {
 ::-webkit-scrollbar-button:single-button:horizontal:increment:active {
 	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='0,0 0,100 50,50'/></svg>");
 }
+
+* {
+	scrollbar-color: #606060 #404040;
+	scrollbar-width: thin;
+}
